--- a/index.html
+++ b/index.html
@@ -4435,7 +4435,7 @@
                     <h4>LangChain</h4>
                     <p>Official documentation and tutorials for building AI applications</p>
                     <div class="resource-links">
-                        <a href="LangChain_index.html" class="resource-link" target="_blank">
+                        <a href="langchian/LangChain_index.html" class="resource-link" target="_blank">
                             <i class="fas fa-external-link-alt"></i> Documentation
                         </a>
                     </div>
