--- a/index.html
+++ b/index.html
@@ -4435,7 +4435,7 @@
                     <h4>LangChain</h4>
                     <p>Official documentation and tutorials for building AI applications</p>
                     <div class="resource-links">
-                        <a href="langchian/LangChain_index.html" class="resource-link" target="_blank">
+                        <a href="langchian/LangChain_index.html" target="_blank">
                             <i class="fas fa-external-link-alt"></i> Documentation
                         </a>
                     </div>
@@ -4448,7 +4448,7 @@
                     <h4>LangGraph</h4>
                     <p>Multi-agent workflow framework for complex AI applications</p>
                     <div class="resource-links">
-                        <a href="https://langchain-ai.github.io/langgraph/" class="resource-link" target="_blank">
+                        <a href="LangGraph/langgraph_index.html" class="resource-link" target="_blank">
                             <i class="fas fa-external-link-alt"></i> Documentation
                         </a>
                     </div>
@@ -4461,7 +4461,7 @@
                     <h4>RAG Cookbook</h4>
                     <p>Comprehensive guide to Retrieval-Augmented Generation</p>
                     <div class="resource-links">
-                        <a href="#" class="resource-link">
+                        <a href="RAG_Cookbook/rag_index.html" class="resource-link">
                             <i class="fas fa-external-link-alt"></i> Documentation
                         </a>
                     </div>
@@ -4474,7 +4474,7 @@
                     <h4>Vector DBs (FAISS, Pinecone)</h4>
                     <p>Vector database solutions for similarity search and embeddings</p>
                     <div class="resource-links">
-                        <a href="#" class="resource-link">
+                        <a href="Vector DBs (FAISS, Pinecone)/vector_db.html" class="resource-link">
                             <i class="fas fa-external-link-alt"></i> Documentation
                         </a>
                     </div>
@@ -4487,7 +4487,7 @@
                     <h4>RL Real-world Business Applications</h4>
                     <p>Reinforcement learning applications in business and industry</p>
                     <div class="resource-links">
-                        <a href="#" class="resource-link">
+                        <a href="RL Real-world Business Applications/businessproblems.html" class="resource-link">
                             <i class="fas fa-external-link-alt"></i> Documentation
                         </a>
                     </div>
@@ -4500,7 +4500,7 @@
                     <h4>MLflow / W&B for MLOps</h4>
                     <p>Machine learning operations and experiment tracking tools</p>
                     <div class="resource-links">
-                        <a href="#" class="resource-link">
+                        <a href="MLflow_W&B_MLOps/MLflow_W&B_MLOps_index.html" class="resource-link">
                             <i class="fas fa-external-link-alt"></i> Documentation
                         </a>
                     </div>
@@ -4513,7 +4513,7 @@
                     <h4>Hugging Face</h4>
                     <p>Transformers library and model hub for state-of-the-art NLP</p>
                     <div class="resource-links">
-                        <a href="https://huggingface.co/" class="resource-link" target="_blank">
+                        <a href="https://github.com/yonteru414/Yallaiah-AI-ML-Engineer/tree/58d3897aafbbf9987533acd5ff3fdd4c236baa85/Hugging%20Face" class="resource-link" target="_blank">
                             <i class="fas fa-external-link-alt"></i> Documentation
                         </a>
                     </div>
@@ -4548,7 +4548,7 @@
                             <p>95% reduction in false information generation</p>
                         </div>
                         <div class="case-study-links">
-                            <a href="#" class="case-study-link">
+                            <a href="AI_HALLUSINATIONS_CASE_STUDY/ai_hallusinations_casestudy.html" class="case-study-link">
                                 <i class="fas fa-file-alt"></i> Documentation
                             </a>
                         </div>
@@ -4574,7 +4574,7 @@
                             <p>40% improvement in compliance accuracy</p>
                         </div>
                         <div class="case-study-links">
-                            <a href="#" class="resource-link">
+                            <a href="FINETUNED_GPT_LEGAL_CONTRACTS/finetune.html" class="resource-link">
                                 <i class="fas fa-file-alt"></i> Documentation
                             </a>
                         </div>
