--- a/index.html
+++ b/index.html
@@ -1366,8 +1366,8 @@
                                 <i class="fas fa-book"></i>
                             </div>
                             <h5 class="card-title">LangChain</h5>
-                            <p class="card-text">Official documentation and tutorials for building AI applications</p>
-                            <a href="resources/langchain-docs.html" class="btn btn-outline-primary btn-sm">
+                            <p class="card-text">Langchain tutorials for building AI applications</p>
+                            <a href="resources/Langchain/Langchain-index.html" class="btn btn-outline-primary btn-sm">
                                 <i class="fas fa-external-link-alt me-1"></i>Documentation
                             </a>
                         </div>
