--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@
                             </div>
                             <h5 class="card-title">RAG Cookbook</h5>
                             <p class="card-text">Comprehensive guide to Retrieval-Augmented Generation</p>
-                            <a href="resources/rag-cookbook.html" class="btn btn-outline-primary btn-sm">
+                            <a href="resources/ragcookbook/ragcookbook-index.html" class="btn btn-outline-primary btn-sm">
                                 <i class="fas fa-external-link-alt me-1"></i>Documentation
                             </a>
                         </div>
@@ -1412,7 +1412,7 @@
                             </div>
                             <h5 class="card-title">Vector DBs</h5>
                             <p class="card-text">FAISS, Pinecone and other vector database solutions</p>
-                            <a href="resources/vector-dbs.html" class="btn btn-outline-primary btn-sm">
+                            <a href="resources/vectordb/vectordb-index.html" class="btn btn-outline-primary btn-sm">
                                 <i class="fas fa-external-link-alt me-1"></i>Documentation
                             </a>
                         </div>
