--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@
                             </div>
                             <h5 class="card-title">RL Applications</h5>
                             <p class="card-text">Reinforcement learning applications in business</p>
-                            <a href="resources/rl-business.html" class="btn btn-outline-primary btn-sm">
+                            <a href="resources/rainforcementlearning-applications/rlApplications-index.html" class="btn btn-outline-primary btn-sm">
                                 <i class="fas fa-external-link-alt me-1"></i>Documentation
                             </a>
                         </div>
