--- a/index.html
+++ b/index.html
@@ -1466,7 +1466,7 @@
                         </div>
                         <h5 class="contact-title">Email</h5>
                         <div class="contact-info">
-                            <a href="mailto:yonteru414@gmail.com">yonteru414@gmail.com</a>
+                            <a href="mailto:yonteru414@gmail.com">yonteru.ai.engineer@gmail.com</a>
                         </div>
                     </div>
                 </div>
