--- a/index.html
+++ b/index.html
@@ -1217,6 +1217,19 @@
         .tooltip-custom.show {
             opacity: 1;
         }
+        .profile-img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 3px solid var(--terminal-green);
+    box-shadow: var(--glow-strong);
+    object-fit: contain;
+    background-color: var(--terminal-light);
+    transition: var(--transition);
+    margin: 0 auto 1.5rem;
+    display: block;
+    padding: 10px;
+}
     </style>
 </head>
 <body>
