--- a/index.html
+++ b/index.html
@@ -2023,6 +2023,20 @@
                                 </div>
                             </div>
                         </div>
+                          <div class="col-lg-4 col-md-6">
+                            <div class="card" data-aos="fade-up" data-aos-delay="700">
+                                <div class="card-body text-center">
+                                    <div class="card-icon">
+                                        <i class="fas fa-project-diagram"></i>
+                                    </div>
+                                    <h5 class="card-title">git</h5>
+                                    <p class="card-text">git- workflow</p>
+                                    <a href="resources/git/git.html" class="terminal-btn">
+                                        <i class="fas fa-external-link-alt me-1"></i>Documentation
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
