--- a/resources/maths/maths-index.html
+++ b/resources/maths/maths-index.html
@@ -138,6 +138,11 @@
                     <div class="application">Supply chain optimization</div>
                     <div><a href="matrices-operations.html" class="link-placeholder">[link]</a></div>
                 </div>
+                 <div class="content-grid">
+                    <div class="subtopic">Eigen-Values & Eigne-Vectors</div>
+                    <div class="application">Economic impact studies</div>
+                    <div><a href="matrices-input-output.html" class="link-placeholder">[link]</a></div>
+                </div>
                 <div class="content-grid">
                     <div class="subtopic">Matrix Inversion</div>
                     <div class="application">Resource allocation models</div>
