--- a/index.html
+++ b/index.html
@@ -1815,7 +1815,7 @@
           <a href="#" class="project-link">
             <i class="fas fa-external-link-alt me-1"></i>Demo
           </a>
-          <a href="https://your-case-study-link.com" class="project-link">
+          <a href="resources/case-study/Time-Series-Forecasting-LSTM.html" class="project-link">
             <i class="fas fa-book me-1"></i>Case Study
           </a>
         </div>
