--- a/resources/maths/maths-index.html
+++ b/resources/maths/maths-index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+eigne<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -141,7 +141,7 @@
                  <div class="content-grid">
                     <div class="subtopic">Eigen-Values & Eigne-Vectors</div>
                     <div class="application">Economic impact studies</div>
-                    <div><a href="matrices-input-output.html" class="link-placeholder">[link]</a></div>
+                    <div><a href="resources/maths/eigne-values-eigen-vectors.html" class="link-placeholder">[link]</a></div>
                 </div>
                 <div class="content-grid">
                     <div class="subtopic">Matrix Inversion</div>
