--- a/resources/maths/maths-index.html
+++ b/resources/maths/maths-index.html
@@ -141,7 +141,7 @@ eigne<!DOCTYPE html>
                  <div class="content-grid">
                     <div class="subtopic">Eigen-Values & Eigne-Vectors</div>
                     <div class="application">Economic impact studies</div>
-                    <div><a href="resources/maths/eigne-values-eigen-vectors.html" class="link-placeholder">[link]</a></div>
+                    <div><a href="resources/maths/eigne-values-eigen-vectors.html" class="link-placeholder">click here</a></div>
                 </div>
                 <div class="content-grid">
                     <div class="subtopic">Matrix Inversion</div>
